--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,9 @@ framework = arduino
 
 ; Serial Monitor
 monitor_speed = 115200
+
+; Device
+upload_port = /dev/cu.SLAB_USBtoUART
+
+; Monitor
+monitor_port = /dev/cu.SLAB_USBtoUART
