select demo mode repaired

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,7 @@ framework = arduino
 monitor_speed = 115200
 
 ; Device
-upload_port = /dev/cu.SLAB_USBtoUART
+upload_port = /dev/cu.usbserial-0001
 
 ; Monitor
-monitor_port = /dev/cu.SLAB_USBtoUART
+monitor_port = /dev/cu.usbserial-0001
